[project]
name = "ansible"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pogin503", email = "pogin503@gmail.com" }
]
dependencies = [
    "ruff>=0.5.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ansible"]
